WFCORE-6369 Optimize AbstractAddStepHandler.Parameters for bulk adds. Collect into list rather than set for heap efficiency, and because AttributeDefinition does not implement hashCode/equals.